syntax = "proto3";

package account;

option go_package = ".;foo";

message InsertRequest {
    string name = 1;
    string value = 2;
}

message InsertResponse {
    bool ok = 1;
}

message GetRequest {
    string name = 1;
}

message GetResponse {
    string name = 1;
    string value = 2;
}

service FooService {
    rpc Insert(InsertRequest) returns (InsertResponse) {}
    rpc Get(GetRequest) returns (GetResponse) {}
}